fix: Allow overflow on ContentBlocks
Allowing overflow is necessary to prevent link and emoji widgets from being hidden in TextBlock

--- a/src/features/pages/components/content-blocks/styles/ContentBlock.module.scss
+++ b/src/features/pages/components/content-blocks/styles/ContentBlock.module.scss
@@ -3,7 +3,6 @@
     color: black;
     position: absolute;
     cursor: pointer;
-    overflow: hidden;
 }
 
 .selected {
